<resources>
    <string name="app_name">EJCommunity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Community</string>
    <string name="nav_header_subtitle">Edward Jones</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_chat_lobby">Messaging</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_chat_room">Chat Room</string>
    <string name="menu_my_region">My Region</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >0 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="input_placeholder">Write a message</string>
</resources>
